Update serviceAppBuild.groovy
modified with ignore branch code